# gol-rust

./: Cargo.toml  README.md  mockup.txt
src/: app.rs  display.rs  inputs.rs  io.rs  lib.rs  main.rs  pos.rs
src/app/: actions.rs  ui.rs
src/inputs/: events.rs  key.rs
src/io/: handler.rs
