[package]
name = "gol-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.16.0"
termion = "1.5.6"
log = "0.4"

# tui-logger = "0.6"
tui-logger = "0.6" # { git = "https://github.com/gin66/tui-logger", rev = "3a3568e2464dddc2205e071234135998342d7f1d" }
tokio = { version = "1", features = ["full"] }
eyre = "0.6"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
